* [ADC] Fixed support for uncompressed files.xml as well as proper files.xml.bz2 support
* Some socket code cleanup
* Removed broken nick save code
* Upgraded yaSSL to 1.4.0
* Fixed some SSL connection issues
* Fixed on-the-fly compression of file lists
* [bug 1055] Stopped files.xml.bz2 from being deleted on linux (thanks dorian)

-- 0.695 2006-09-10 --
* PM popup/ignore options updated, in nmdc a hub is any nick which hasn't sent a hello or myinfo, and a bot is a nick with myinfo
  without connection type
* [bug 125] Fixed out-of-order PM/quit
* [bug 224] Slots are no longer granted to disconnected users, instead disconnection is delayed a minute
* [NMDC] Fixed extra space in chat
* [bug 395] Fixed password being blanked
* [bug 419] Allowed changing case only when moving file in queue
* [bug 736] Fixed escaping of menu items
* [bug 1013] Fixed gcc warnings (thanks steven sheehy)
* [bug 1023] Fixed some large stack allocations (thanks steven sheehy)
* [bug 1026] Fixed some potential buffer overflows (thanks steven sheehy)
* [bug 1027] Improved unix socket support (thanks steven sheehy)
* [bug 1028] Improved big endian support (thanks steven sheehy)
* [bug 1029] Fixed BSD compile issue (thanks steven sheehy)
* [bug 1031] Fixed a crash after closing hub window (thanks bigmuscle/pothead)
* [bug 1032] Fixed certificates help (thanks pothead)
* Added possibility to store configuration files in separate directory
* Switched back to unicows for w9x users, opencow was missing too many functions
* [bug 876] Fixed lost tooltips (thanks poy and bigmuscle)
* [bug 1041] Fixed about tab order (thanks pothead)
* [bug 1042] Fixed experts tab order (thanks pothead)
* [bug 1047] Fixed possible nmdc crash (thanks guitarm)
* [bug 1049] Added tooltip to tab bar (thanks poy)
* [bug 1053] Fixed vista detection (thanks ullner)
* [bug 988] Fixed duplicate nicks
* [bug 1015] Fixed chevron text
* Default hub lists updated

-- 0.694 2006-07-10 --
* Fixed crash in certificates page