@@ -13,6 +13,9 @@
 * Fixed some SSL connection issues
 * Fixed on-the-fly compression of file lists
 * [bug 1055] Stopped files.xml.bz2 from being deleted on linux (thanks dorian)
+* [bug 1061] Log page fix (thanks fleetcommand)
+* [bug 1033] Altered NMDC hubname/description detection slightly (thanks fleetcommand)
+* [bug 1059] Fixed the possibility for users to become hidden in some cases (thanks fleetcommand)
 
 -- 0.695 2006-09-10 --
 * PM popup/ignore options updated, in nmdc a hub is any nick which hasn't sent a hello or myinfo, and a bot is a nick with myinfo
